--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up Image Build
+        uses: docker build -t ian293382/shorturl-web:latest . 
 
       - name: Validate Docker Compose
         run: docker compose -f docker-compose.yml config
@@ -27,12 +27,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-
-      - name: Build and push Docker image (web)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ian293382/shorturl-web:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+      - name: push to dockerhub 
+        run: docker push ian293382/shorturl-web:latest
